# python-sireader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  si_normalize_station.py  si_read_backup.py
sireader/: __init__.py  compat.py  exceptions.py  si_constants.py  sireader.py  sireader2.py  sireader_control.py  sireader_readout.py
sireader/tools/: check_punches.py  si_check_memory.py  si_read_card.py  si_set_legacy_4800.py
